--- a/projects/pac/defaults.yaml
+++ b/projects/pac/defaults.yaml
@@ -13,15 +13,16 @@ dataset_config:
     - textcaps.defaults
     features:
       train:
-      - textvqa/defaults/features/open_images/detectron.lmdb,textvqa/ocr_en/features/ocr_en_frcn_features.lmdb
-      val:
-      - textvqa/defaults/features/open_images/detectron.lmdb,textvqa/ocr_en/features/ocr_en_frcn_features.lmdb
-      test:
-      - textvqa/defaults/features/open_images/detectron.lmdb,textvqa/ocr_en/features/ocr_en_frcn_features.lmdb
+      - features/obj_lmdb/data.lmdb,features/spec_lmdb/data.lmdb
+    annotations:
+      train:
+      - features/annotations.npy
+     
 
 evaluation:
   metrics:
   - textcaps_bleu4
+
 
 training:
     clip_norm_mode: all
@@ -36,8 +37,8 @@ training:
     warmup_factor: 0.2
     warmup_iterations: 1000
     max_iterations: 12000
-    batch_size: 32
-    num_workers: 8
+    batch_size: 8
+    num_workers: 1
     task_size_proportional_sampling: true
     early_stop:
       criteria: textcaps/textcaps_bleu4
