--- a/projects/m4c_captioner/configs/m4c_captioner/textcaps/oh-defaults.yaml
+++ b/projects/m4c_captioner/configs/m4c_captioner/textcaps/oh-defaults.yaml
@@ -25,6 +25,51 @@ dataset_config:
       - textcaps/defaults/annotations/oh_imdb_val_filtered_by_image_id.npy  # only one sample per image_id
       test:
       - textcaps/defaults/annotations/imdb_test_filtered_by_image_id.npy  # only one sample per image_id
+    processors:
+      text_processor:
+        type: bert_tokenizer
+        params:
+          tokenizer_config:
+            type: bert-base-uncased
+            params:
+              do_lower_case: true
+          max_seq_length: 3
+      answer_processor:
+        type: m4c_caption
+        params:
+          vocab_file: textcaps/defaults/extras/vocabs/vocab_textcaps_threshold_10_new.txt
+          preprocessor:
+            type: simple_word
+            params: {}
+          context_preprocessor:
+            type: simple_word
+            params: {}
+          max_length: 50
+          max_copy_steps: 30
+          num_answers: 1
+      copy_processor:
+        type: copy
+        params:
+          max_length: 100
+      phoc_processor:
+        type: phoc
+        params:
+          max_length: 50
+      context_processor:
+        type: fasttext
+        params:
+          max_length: 50
+          model_file: wiki.en.bin
+      ocr_token_processor:
+        type: simple_word
+        params: {}
+      bbox_processor:
+        type: bbox
+        params:
+          max_length: 50
+    return_features_info: true
+    use_ocr: true
+    use_ocr_info: true
 
 model_config:
   spec_captioner:
@@ -55,6 +100,8 @@ model_config:
     - type: m4c_decoding_bce_with_mask
     remove_unk_in_pred: true
     model: spec_captioner
+
+
 
 evaluation:
   metrics:
